force-app/main/default/objects/Contact_Execution_Log__c/Contact_Execution_Log__c.object-meta.xml
<CustomObject>
    <description>Per-contact execution state timeline for journey tracking</description>
    <label>Contact Execution Log</label>
    <nameField>
        <displayFormat>LOG-{00000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Execution Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>