force-app/main/default/objects/Contact_Execution_Log__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Execution Logs</relationshipLabel>
    <relationshipName>Execution_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>