force-app/main/default/objects/Contact_Execution_Log__c/fields/Current_State__c.field-meta.xml
<CustomField>
    <fullName>Current_State__c</fullName>
    <label>Current State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>