force-app/main/default/objects/Contact_Execution_Log__c/fields/Journey_Execution__c.field-meta.xml
<CustomField>
    <fullName>Journey_Execution__c</fullName>
    <label>Journey Execution</label>
    <referenceTo>Journey_Execution__c</referenceTo>
    <relationshipLabel>Contact Logs</relationshipLabel>
    <relationshipName>Contact_Logs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>