force-app/main/default/objects/Contact_Execution_Log__c/fields/Source_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Source_Record_ID__c</fullName>
    <description>Record ID from custom source objects when not using standard Contact</description>
    <label>Source Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>