force-app/main/default/objects/Contact_Execution_Log__c/fields/State_History__c.field-meta.xml
<CustomField>
    <fullName>State_History__c</fullName>
    <description>JSON array of state transitions: [{state, channel, timestamp, status}]</description>
    <label>State History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>